...
                    ),
                    child: InkWell(
                      onTap: () {
                        Get.offAllNamed('/user');
                      },
                      child: const Text(
                        "Masuk",
                        style: TextStyle(
                          color: Colors.white,
                          fontSize: 16,
                          fontFamily: 'OpenSans',
                          fontWeight: FontWeight.w300,
                        ),
...
